mosquitto/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: hass
  labels:
    service: mqtt-external
    app: mqtt
  name: mqtt-external
spec:
  ports:
  - name:  tls
    port: 8883
    targetPort:  8883
    protocol:  TCP
  selector:
    app: mqtt
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  namespace: hass
  labels:
    service: mqtt-internal
    app: mqtt
  name: mqtt-internal
spec:
  ports:
  - name:  insecure
    port: 1883
    targetPort:  1883
    protocol:  TCP
  selector:
    app: mqtt
  type: ClusterIP
