mosquitto/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt
  namespace: hass
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`mqtt.@@MYDOMAIN@@`)
    services:
    - name: mqtt
      port: 1883
      nativeLB: true
  tls:
    secretName: tls-certificate
    passthrough: false
    domains:
      - main: @@MYDOMAIN@@
        sans:
          - "*.@@MYDOMAIN@@"
          - mqtt.@@MYDOMAIN@@
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-insecure
  namespace: hass
spec:
  entryPoints:
    - mqtt-insecure
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mqtt
      port: 1883
      nativeLB: true
